--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,5 @@ rplace:
     height: 500
   cooldown-millis: 120000
   max-pixels-per-batch: 20
+  # update the image every 2 seconds
+  image-update-frequency: 2000
