enabled scheduling to save snapshot image every 2 minutes
but it won't save if the image is the same

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,3 +14,4 @@ rplace:
   max-pixels-per-batch: 20
   # update the image every 2 seconds
   image-update-frequency: 2000
+  snapshot-dir: images/snapshots
