also storing json with ownership information for each snapshot

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,4 +16,4 @@ rplace:
   image-update-frequency: 2000
   # reload most recent snapshot
   reload-snapshot: true
-  snapshot-dir: images/snapshots
+  snapshot-dir: snapshots
