can now set colors in rplace.colors

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,3 +32,36 @@ rplace:
   snapshot-dir: snapshots
   # reload most recent snapshot upon startup?
   reload-snapshot: true
+  colors:
+    0: "#6d001a"
+    1: "#be0039"
+    2: "#ff4500"
+    3: "#ffa800"
+    4: "#ffd635"
+    5: "#fff8b8"
+    6: "#00a368"
+    7: "#00cc78"
+    8: "#7eed56"
+    9: "#00756f"
+    10: "#009eaa"
+    11: "#00ccc0"
+    12: "#2450a4"
+    13: "#3690ea"
+    14: "#51e9f4"
+    15: "#493ac1"
+    16: "#6a5cff"
+    17: "#94b3ff"
+    18: "#811e9f"
+    19: "#b44ac0"
+    20: "#e4abff"
+    21: "#de107f"
+    22: "#ff3881"
+    23: "#ff99aa"
+    24: "#6d482f"
+    25: "#9c6926"
+    26: "#ffb470"
+    27: "#000000"
+    28: "#515252"
+    29: "#898d90"
+    30: "#d4d7d9"
+    31: "#ffffff"
